# Backend

./: .gitignore  gyms.py  main.py  pyproject.toml  pytest.ini
schemas/: hotels.py
src/: config.py  database.py  exceptions.py  main.py
src/api/: auth.py  bookings.py  dependencies.py  facilities.py  hotels.py  images.py  rooms.py
src/api/open_api_examples/: hotel_example.py  rooms_example.py
src/connectors/: redis_connector.py
src/migrations/: env.py
src/migrations/versions/: 12_09_2024_23_02_initial_migration.py  12_09_2024_23_49_added_roomsorm.py  2024_09_13_0004-7774a1daf9d1_added_roomsorm.py  2024_09_13_2309-c1162402402d_added_usersorm.py  2024_09_14_0020-fb72af59a67d_set_qnuque_for_email_in_usersorm.py  2024_09_17_1241-e6494773910a_add_bookings.py  2024_09_18_2143-cab9d407804d_added_facilities.py  2024_09_20_2230-83224f90badd_added_facilities.py
src/models/: __init__.py  bookings.py  facilities.py  hotels.py  rooms.py  users.py
src/repositories/: base.py  bookings.py  facilities.py  hotels.py  rooms.py  users.py  utils.py
src/repositories/mappers/: base.py  mappers.py
src/schemas/: bookings.py  facilities.py  hotels.py  room.py  users.py
src/services/: auth.py  base.py  hotels.py  rooms.py
src/tasks/: celery_app.py  tasks.py
src/utils/: db_manager.py
tests/: conftest.py  mock_users.json
tests/integration_tests/: test_auth.py
tests/integration_tests/bookings/: test_api.py  test_db.py
tests/integration_tests/facilities/: test_api.py
tests/integration_tests/hotels/: test_api.py  test_db.py
